# prometheo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
datasets/: base.py  scaleag.py  worldcereal.py
docs/investigations/: olmoearth-tiny-support.md
prometheo/: finetune.py  infer.py  predictors.py  ssl.py  utils.py
prometheo/datasets/: __init__.py  base.py  scaleag.py  worldcereal.py
prometheo/models/: __init__.py  pooling.py
prometheo/models/olmoearth/: __init__.py  wrapper.py
prometheo/models/presto/: __init__.py  masking.py  single_file_presto.py  wrapper.py
src/: predictors.py
src/models/presto/: single_file_presto.py  wrapper.py
tests/: test_dataset.py  test_finetuning.py  test_olmoearth.py  test_olmoearth_integration.py  test_predictors.py  test_presto.py  test_scaleag_dataset.py  test_ssl.py  test_worldcereal_dataset.py
tests/resources/: __init__.py  worldcereal_dataset.parquet
