[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheo"
version = "0.0.4"
description = "PromethEO Repository"
authors = [
  { name="Gabriel Tseng", email="gabriel.tseng@gmail.com" },
  { name="Christina Butsko" },
  { name="Kristof Van Tricht", email="kristofvantricht@gmail.com" },
  { name="Giorgia Milli" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "einops~=0.8.0",
  "geopandas>=0.13.2",
  "loguru",
  "numpy>=2.0.0",
  "torch>=2.3.0",
  "tqdm",
  "xarray>=2023.1.0",
  "requests",
  "scikit-learn",
  "fastparquet",
  "h5netcdf>=1.3.0",
  "h5py",
  "matplotlib>=3.7.5",
  "rtree>=1.1.0"
  ]

[project.urls]
"Homepage" = "https://github.com/WorldCereal/prometheo"
"Bug Tracker" = "https://github.com/WorldCereal/prometheo/issues"

[project.optional-dependencies]
dev = [
  "types-requests~=2.32.0",
  "mypy==1.11.2"
]
train = [
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = [
  "--import-mode=prepend",
]

[tool.ruff]
# line-length = 88
